rns-lang/tests/snapshots/lexer-strings-basic_unterminated_string.snap
---
source: jasm/tests/integration_test.rs
assertion_line: 80
expression: "&combined"
---
----- INPUT  -----
.class public Test
"String with no ending quote
.end
----- STDOUT -----

----- STDERR -----
Error: lexing error
   ╭─[ tests/testdata/lexer/strings/basic_unterminated_string.ja:2:1 ]
   │
 2 │ "String with no ending quote
   │ ┬  
   │ ╰── String started here is not terminated
   │ 
   │ Note: String literal is not terminated before the end of the line or file.
───╯
